# ORB-SLAM-Android-app

./: README.md
slam_ext/: BUILD_GUIDE_ANDROID.md  BUILD_GUIDE_LINUX.md  CMakeLists.txt  README.mk  build.android.sh  build.linux.sh  guida.md.bak.1  guida.md.bak.2  guide.md  setup.ALWAYS.sh
slam_ext/Data/: settings.yaml
slam_ext/app_android/: build.ndk.profiler.sh  build.ndk.sh  import-summary.txt  local.properties  profile.sh  settings.gradle
slam_ext/app_android/app/: build.gradle  local.properties
slam_ext/app_android/app/src/main/: .project
slam_ext/app_android/app/src/main/assets/effect/: CameraView.effect
slam_ext/app_android/app/src/main/assets/scene/: scene.xml
slam_ext/app_android/app/src/main/assets/script/: my_mouse_script.lua
slam_ext/app_android/app/src/main/assets/settings/: Settings.yaml
slam_ext/app_android/app/src/main/java/com/utils/net/rest/: IResultHandler.java  RequestManager.java  RequestMethod.java  RestClient.java  ServiceCall.java
slam_ext/app_android/app/src/main/java/com/utils/net/rest/asyncoperation/: CallerHandler.java  CallerThread.java
slam_ext/app_android/app/src/main/java/com/utils/net/results/: RestResult.java  ResultKind.java
slam_ext/app_android/app/src/main/java/com/viewtwoo/: CustomJavaCameraView.java  EngineConnector.java  LoginActivity.java  MinkoActivity.java  SlamConnector.java
slam_ext/app_android/app/src/main/java/com/viewtwoo/utils/io/: Assets.java  Files.java  Settings.java
slam_ext/app_android/app/src/main/java/org/libsdl/app/: SDLActivity.java
slam_ext/app_android/app/src/main/jni/: Android.mk  Application.mk  android.h  jni_part.cpp
slam_ext/app_android/app/src/main/res/layout/: activity_login.xml
slam_ext/app_android/app/src/main/res/menu/: main_menu.xml  menu_login.xml
slam_ext/app_android/app/src/main/res/values/: ids.xml  strings.xml
slam_ext/app_android/dlopen/: build.gradle
slam_ext/app_android/dlopen/src/main/: .cproject
slam_ext/app_android/dlopen/src/main/java/com/github/ikonst/android_dl/: AndroidDl.java
slam_ext/app_android/dlopen/src/main/jni/: Android.mk  Application.mk
slam_ext/app_android/dlopen/src/main/jniLibs/armeabi-v7a/: gdb.setup
slam_ext/app_android/modules/android-ndk-profiler/: Android.mk
slam_ext/app_android/openCVLibrary2411/: build.gradle
slam_ext/app_android/openCVLibrary2411/src/main/java/org/opencv/android/: CameraBridgeViewBase.java
slam_ext/build.android/g2o/: CMakeLists.txt  config.h
slam_ext/build.android/g2o/g2o/stuff/: macros.h
slam_ext/docs/: Android.mk  AndroidManifest.xml  Application.mk  Tutorial2Activity.java  jni_part.cpp
slam_ext/slam_linux/calibrateData/: calibrate.data  calibrate.data.n9005
slam_ext/slam_linux/data/: Settings.yaml
slam_ext/slam_linux/src/: calibrate.cpp  calibrate.h  includes.cpp  includes.h  main.cpp  main.h  slam.cpp  slam.h
